feat: implements chat messages
