# src/modules/chatmessages/dto/create-message.dto.ts
@@ -1,0 +1,9 @@
+import { IsUUID, IsString } from 'class-validator';
+
+export class CreateMessageDto {
+  @IsUUID()
+  toUserId: string;
+
+  @IsString()
+  content: string;
+}
